<resources>
    <string name="app_name">Grief Resort</string>
    <string name="title1">Your Loved Ones are Still With You</string>
    <string name="title2">All we are left with now are Memories</string>
    <string name="title3">Never Forget/Miss Special Dates </string>
    <string name="title4">We are left with so many Whys!</string>
    <string name="title5">Somedays are harder than others</string>
    <string name="title6">This is a Judgement Free Zone</string>
    <string name="description1">They find new ways to reach you. Whether through dreams or signs, this is a space to share those moments.</string>
    <string name="description2">Here keep memories of your loved ones alive forever where you can access &amp; update them easily </string>
    <string name="description3">Here you can set a reminder notification for upcoming special dates</string>
    <string name="description4">Reading or listening or Watching something about grief can help you cope by opening up new perspectives</string>
    <string name="library_title">We are left with so many Whys! Reading or listening or Watching something about grief can help you cope by opening up new perspectives</string>
    <string name="description5">Uplift Your Spirit with these powerful grieving quotes</string>
    <string name="description6">Share your thoughts &amp; feelings, your ups &amp; downs, your victories &amp; fears</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_next">Next</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="deepest">Our Deepest Condolences to you and your family</string>
    <string name="welcome">We welcome you to Grief Resort, an app for those that are Grieving and have lost a loved one</string>
    <string name="continue_text">Continue</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_passwords">Forgot Password</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_current_passwrod">Confirm Current Password</string>
    <string name="current_passwrod">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="sign_in">Sign In</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_account">Don’t have an account?</string>
    <string name="have_account">Already have an account?</string>
    <string name="terms">By clicking Sign Up you agree to our <b><font color="#3AAE42"> Terms</font> </b></string>
    <string name="privacy">and Acknowledge that you have read our  <b>   <font color="#3AAE42">Privacy Policy</font></b>
</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="user_name">User Name</string>
    <string name="reset">Reset Password</string>
    <string name="forgot_email">Enter your email address and we will send you password reset instructions.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="group_hug">Dreams &amp; Signs</string>
    <string name="group_title">This space is built on Love❤ Please engage with kindness and respect. Skepticism, negativity, and dismissive comments are not allowed.</string>
    <string name="group_title_note">To keep this a safe and meaningful space, no promotions or contact details are allowed. Violations may result in account removal.
</string>
    <string name="group_desc">Send a Hug or Give \n words of support</string>
    <string name="memory_box">Memory Box</string>
    <string name="memory_title">All we are left with now are memories. Let\'s keep those memories alive forever. Here add photos/videos of your loved ones, the funeral, grave visits, their treasured items etc</string>
    <string name="memory_desc">Add Picture/Video/Audio here</string>
    <string name="single_memory_title">It\'s beautiful how you are keeping their legacy alive. Below are the %1$s memories</string>
    <string name="remind_me">Remind Me</string>
    <string name="remind_me_title">Never Forget/Miss Special Dates. Here add a special date such as anniversary, grave visit, estate administration meeting etc and get a Notification Reminder</string>
    <string name="remind_me_desc">Add a special date</string>
    <string name="delete"><font color="#3AAE42">Delete?</font></string>
    <string name="report"><font color="#3AAE42">Report</font></string>
    <string name="edit"><font color="#3AAE42">Edit</font></string>
    <string name="cancel_"><font color="#3AAE42">Cancel</font></string>
    <string name="library">Library </string>
    <string name="quotes">Quotes</string>
    <string name="quotes_title">Some days are harder than others. Uplift Your Spirit with these powerful Uplifting quotes</string>
    <string name="quotes_desc">Scroll Up</string>
    <string name="my_diary">My Diary</string>
    <string name="my_diary_desc">Share Your Dreams &amp; Signs Here</string>
    <string name="my_diary_desc_save">Save Your Dreams &amp; Signs Here</string>
    <string name="my_diary_title">Your loved ones are still with you—they find new ways to reach you. Whether through dreams, unexpected encounters, or small everyday signs, their presence lives on. This is a Judgement Free Space! Feel Free to share your dreams and the signs that brought you comfort.</string>
    <string name="my_diary_title_note">To keep this a safe and meaningful space, promoting businesses, products, services or sharing contact details (emails, phone numbers, etc.) is strictly prohibited. Violations will result in account removal</string>
    <string name="my_account">My Account</string>
    <string name="manage_subscription">Manage Subscription</string>
    <string name="contatct_us">Contact Us</string>
    <string name="faqs">FAQs</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="termsCondition"><![CDATA[Terms & Conditions]]></string>
    <string name="log_out">Log Out</string>
    <string name="edit_account">Edit Account Details</string>
    <string name="edit_account2">Edit Account </string>
    <string name="delete_account">Delete Account</string>
    <string name="cancel_subscription">How to cancel my subscription?</string>
    <string name="save">Save</string>
    <string name="not_subscribe">You are not  subscribed yet</string>
    <string name="subscribe_now">Subscribe Now</string>
    <string name="cancel_payments">If you want to stop recurring  payments, you can do so <font color="#3AAE42"> here.</font></string>
    <string name="question">Questions? Click Here</string>
    <string name="what_is_grief">What is Grief Resort?</string>
    <string name="delete_account_desc">

    Refunds cannot be provided for
    deleted accounts. For refunds,
    <u>contact our support</u> team before
    deleting your account.

 </string>
    <string name="contact">
    Please feel free to reach us at:
    <font color="#3AAE42">support@griefresort.com</font>
    We are open Monday to Friday
    <font color="#3AAE42">9am - 5pm Pacific Time</font>


    We are closed on weekends and
    holidays
    </string>
    <string name="subscribed">You Subscribed on Android</string>
</resources>