<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/groupHug"
        android:icon="@drawable/hug_icon_selector"
        android:title="Dreams/Signs" />

    <item
        android:id="@+id/memoryBox"
        android:icon="@drawable/memory_icon_selector"
        android:title="@string/memory_box" />

    <item
        android:id="@+id/remindMe"
        android:icon="@drawable/reminder_icon_selector"
        android:title="@string/remind_me" />
    <item
        android:id="@+id/library"
        android:icon="@drawable/lib_icon_selector"
        android:title="@string/library" />

    <item
        android:id="@+id/myDiary"
        android:icon="@drawable/diary_icon_selector"
        android:title="@string/my_diary" />


</menu>